Closed Bug 1137957 Opened 10 years ago Closed 10 years ago

Unified build failure in GMPVideoDecoder

Categories

(Core :: Audio/Video, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla39
Tracking Status
firefox37 --- fixed
firefox38 --- fixed
firefox39 --- fixed

People

(Reporter: cpearce, Assigned: cpearce)

References

Details

Attachments

(2 files)

With unified builds disabled, I get this error: 0:12.50 Note: rebuild with "c:/mozilla-build/mozmake/mozmake.EXE VERBOSE=1 all-local" to show all compiler parameters. 0:13.20 MediaDataDecoderProxy.cpp 0:13.49 GMPVideoDecoder.cpp 0:13.49 c:\users\cpearce\src\mozilla\beta\objdir\dist\include\nsTArray.h(439) : error C2129: static function 'bool mozilla::IsOnGMPThread(void)' declared but not defined 0:13.49 c:/Users/cpearce/src/mozilla/beta/dom/media/fmp4/gmp/GMPVideoDecoder.cpp(14) : see declaration of 'mozilla::IsOnGMPThread' 0:13.50 0:13.50 In the directory /c/Users/cpearce/src/mozilla/beta/objdir/dom/media/fmp4/gmp This also happens in my EME uplift patch queue on Try, without unified disabled.
Assignee: nobody → cpearce
Attached patch PatchSplinter Review
Attachment #8570793 - Flags: review?(kinetik)
Attachment #8570793 - Flags: review?(kinetik) → review+
Must uplift...
Flags: needinfo?(cpearce)
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla39
Attached patch Beta patchSplinter Review
Patch for beta branch as part of EME platform uplift.
Comment on attachment 8572385 [details] [diff] [review] Beta patch Requesting retroactive approval for Beta landing as part of EME platform uplift.
Flags: needinfo?(cpearce)
Attachment #8572385 - Flags: approval-mozilla-beta?
Comment on attachment 8572385 [details] [diff] [review] Beta patch Approved for Beta and Aurora as part of EME platform uplift.
Attachment #8572385 - Flags: approval-mozilla-beta?
Attachment #8572385 - Flags: approval-mozilla-beta+
Attachment #8572385 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: