Bug 1137957 - Fix non-unified build failure in GMPVideoDecoder. r=kinetik a=lmandel